# edge-executor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish-dry-run.yml  publish.yml
benches/: executor.rs
examples/: borrow.rs  parallel.rs  priority.rs
src/: lib.rs
tests/: different_executors.rs  drop.rs  local_queue.rs
