[package]
name = "edge-executor"
version = "0.3.1"
authors = ["Ivan Markov <ivan.markov@gmail.com>"]
edition = "2021"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "async", "executor"]
description = "Async executor suitable for embedded environments."
repository = "https://github.com/ivmarkov/edge-executor"
license = "MIT OR Apache-2.0"
readme = "README.md"

[patch.crates-io]
async-task = { git = "https://github.com/ivmarkov/async-task" }

[features]
default = ["std"]
std = ["futures-lite/std"]
unbounded = []
portable-atomic = ["dep:portable-atomic", "portable-atomic-util", "atomic-waker/portable-atomic", "async-task/portable-atomic"]

[dependencies]
heapless = { version = "0.7", default-features = false, features = ["cas"], optional = true }
portable-atomic = { version = "1.4", features = ["critical-section"], optional = true }
portable-atomic-util = { version = "0.1", default-features = false, features = ["alloc"], optional = true }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
async-task = { version = "4", default-features = false }
atomic-waker = { version = "1", default-features = false }
futures-lite = { version = "1", default-features = false }
